# bigstream

./: .gitignore  Dockerfile  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  conda-env.yaml  pyproject.toml  setup.py
bigstream/: affine.py  align.py  application_pipelines.py  apply_transform.py  apply_transform_n5.py  cli.py  cluster.py  config.py  configuration.py  configure_bigstream.py  configure_dask.py  configure_irm.py  configure_logging.py  cut_tiles.py  cv2_ransac.py  deform.py  distributed.py  distributed_align.py  distributed_io_utility.py  distributed_stacks.py  distributed_transform.py  distributed_utils.py  dog_spots.py  features.py  image_data.py  interpolate_affines.py  io_utility.py  io_utils.py  level_set.py  metrics.py  motion_correct.py  n5_metadata_utils.py  n5_utils.py  piecewise_align.py  piecewise_transform.py  pipelines.py  ransac.py  run_stream.sh  spots.py  stitch.py  (+5 more)
config/: default_bigstream_config.yaml
configs/: bigstream_config.yml  dask_config.yml  logging_config.ini
launchers/: cli.py  main_apply_local_transform.py  main_apply_transform_coords.py  main_compute_local_inverse.py  main_global_align_pipeline.py  main_local_align_pipeline.py
notebooks/: README-datasets.md  bigstream_easifish_pipeline_example.ipynb  bigstream_intro_tutorial.ipynb  local_register_only.ipynb  register_round_to_round.ipynb  test_transform.ipynb
resources/: default_config.yml
scripts/: main_align_pipeline.py  main_apply_global_transform.py  main_apply_local_transform.py  main_apply_transform_coords.py  main_compute_local_inverse.py  (+2 more)
(+402 files in other folders)
